--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -17,7 +17,7 @@ build:
 
 # Build documentation in the "source/" directory with Sphinx
 sphinx:
-  configuration: source/conf.py
+  configuration: doc/sphinx/source/conf.py
 
 # Optionally build your docs in additional formats such as PDF and ePub
 # formats:
@@ -29,4 +29,4 @@ sphinx:
 # See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
 python:
    install:
-   - requirements: source/requirements.txt
+   - requirements: doc/sphinx/source/requirements.txt
